Working on Raspberry Pi (configure sensor details as required)

--- a/config/com.ge.dspmicro.sample.raspimachineadapter.config
+++ b/config/com.ge.dspmicro.sample.raspimachineadapter.config
@@ -63,3 +63,6 @@ com.ge.dspmicro.sample.raspimachineadapter.Sensors=[ \
  "defgh,defghName,defghDescription,defghUom" \
 ]
 
+# Sensor location information
+com.ge.dspmicro.sample.raspimachineadapter.SensorW1Location="/tmp/sys/bus/w1/devices"
+com.ge.dspmicro.sample.raspimachineadapter.SensorW1Filename="w1_slave"
